# python_workflows_queue

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
conductor/: README.md  pyproject.toml
conductor/queue_workflows_conductor/: __init__.py  conductor.py  web.py
docs/: broker_api.md  broker_db_schema.md  client_api.md  client_db_schema.md  conductor.md  llm_backends.md  multitenant_broker.md  sqlite_engine_port.md  storage_backends.md  watchdogs.md  worker_control.md
queue_workflows/: __init__.py  broker.py  cancel_watcher.py  cgroup_attribution.py  claim_worker.py  config.py  db.py  dialect.py  dispatcher.py  gpu_health.py  gpu_model_cache.py  gpu_pool.py  hw_feed.py  hw_metrics.py  ingest_executor.py  ingest_store.py  input_listener.py  model_cache.py  model_registry.py  node_executor.py  node_pool.py  node_queue.py  orchestrator.py  refs.py  run_store.py  scheduler.py  worker_control.py
queue_workflows/backends/: __init__.py  base.py  mongodb.py  postgres.py  redis.py
queue_workflows/llm_backends/: __init__.py  base.py  factory.py  ollama.py  supervisor.py  vllm.py
queue_workflows/migrations/: 0001_queue_runs.down.sql  0001_queue_runs.sql  0002_node_jobs.down.sql  0002_node_jobs.sql  0003_input_submissions.down.sql  0003_input_submissions.sql  0004_dispatch_events.down.sql  0004_dispatch_events.sql  0005_worker_heartbeats.down.sql  0005_worker_heartbeats.sql  0006_pg_queue_lease.down.sql  0006_pg_queue_lease.sql  0007_ingest_jobs.down.sql  0007_ingest_jobs.sql  0008_multitenant_ingest.sql  0009_worker_heartbeats_dead_flag.down.sql  0009_worker_heartbeats_dead_flag.sql  0010_node_job_watchdog_retries.down.sql  0010_node_job_watchdog_retries.sql  0011_node_events.down.sql  0011_node_events.sql  0012_worker_controls.sql  0013_worker_controls_llm.down.sql  0013_worker_controls_llm.sql  0014_worker_heartbeats_llm_servers.down.sql  0014_worker_heartbeats_llm_servers.sql  0015_capacity_aware_assignment.down.sql  0015_capacity_aware_assignment.sql  0016_node_priority_flag.down.sql  0016_node_priority_flag.sql  0017_project_tenant.down.sql  0017_project_tenant.sql  __init__.py
queue_workflows/migrations_sqlite/: 0001_queue_runs.sql  0002_node_jobs.sql  0003_input_submissions.sql  0004_dispatch_events.sql  0005_worker_heartbeats.sql  0007_ingest_jobs.sql  0011_node_events.sql  0012_worker_controls.sql  0017_project_tenant.down.sql  0017_project_tenant.sql
tests/: _cancel_helper.py  _dispatch_driver.py  _helpers.py  conftest.py  test_awaiting_input_spec.py  test_backend_contract.py  test_backend_factory.py  test_broker_consolidation.py  test_capacity_assignment.py  test_cgroup_attribution.py  test_claim_worker.py  test_client_conductor_boundary.py  test_conductor_cli.py  test_conductor_hw_panel.py  test_conductor_web.py  test_dead_worker_sweep.py  test_dispatcher_batching.py  test_dispatcher_skip_if.py  test_fleet_snapshot.py  test_gpu_blind_refuse.py  test_gpu_health.py  test_gpu_idle_unload.py  test_gpu_pool.py  test_hw_feed.py  test_hw_metrics_flock.py  test_hw_metrics_gpu_probe.py  test_ingest_on_redis.py  test_ingest_queue.py  test_ingest_store.py  test_inline_pool_cap.py  test_input_listener.py  test_invariant_cancel.py  test_invariant_dispatch_events.py  test_invariant_input_listener_reclaim.py  test_invariant_late_input_resolution.py  test_invariant_mark_completed_idempotent.py  test_invariant_node_event_types.py  test_invariant_startup_health.py  test_invoke_context.py  test_lease_reclaim_sweep.py  (+31 more)
