[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queue_workflows"
version = "0.4.0"
description = "Postgres-as-queue workflow engine (SKIP LOCKED claim, lease reclaim, DAG dispatch, GPU warm-model cache)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Robert Zieliński", email = "hello@robertz.co" }]
keywords = ["postgres", "queue", "workflow", "dag", "skip-locked", "task-queue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "psycopg[binary,pool]>=3.1",   # the only hard runtime dep (pool + connection + LISTEN/NOTIFY)
]

[project.optional-dependencies]
metrics = ["psutil"]               # hw_metrics CPU/RAM probe (GPU probe shells out, no dep)
redis = ["redis>=5"]               # the 'redis' StorageBackend (queue_workflows.backends.redis)
mongodb = ["pymongo>=4.4"]         # the 'mongodb' StorageBackend (needs a replica set)
test = ["pytest", "pytest-cov", "redis>=5", "pymongo>=4.4"]

[project.scripts]
queue-claim-worker   = "queue_workflows.claim_worker:main"   # generic CLIs (used standalone / other projects)
queue-scheduler      = "queue_workflows.scheduler:main"
queue-orchestrator   = "queue_workflows.orchestrator:main"
queue-worker-control = "queue_workflows.worker_control:main"  # turn a (host,queue) worker ON/OFF

[tool.hatch.build.targets.wheel]
packages = ["queue_workflows"]

[tool.hatch.build.targets.wheel.force-include]
"queue_workflows/migrations" = "queue_workflows/migrations"   # ship the SQL as package data

[tool.pytest.ini_options]
testpaths = ["tests"]
