[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# The CLIENT distribution keeps its established name `queue_workflows` — consumers
# install it by PATH (editable / PYTHONPATH mount / wheel built from this tree),
# not by index name, and one consumer's wheel build globs `queue_workflows-*.whl`,
# so renaming the dist would break it for zero benefit. The split is still real:
# the conductor ships as the separate `queue-workflows-conductor` distribution.
name = "queue_workflows"
version = "0.5.0"
description = "broker_parrot — Postgres-as-queue workflow engine (CLIENT / per-project data plane): SKIP LOCKED claim, lease reclaim, DAG dispatch, GPU warm-model cache. Import package `queue_workflows`. The conductor (control plane) ships as the separate queue-workflows-conductor distribution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Robert Zieliński", email = "hello@robertz.co" }]
keywords = ["postgres", "queue", "workflow", "dag", "skip-locked", "task-queue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "psycopg[binary,pool]>=3.1",   # the only hard runtime dep (pool + connection + LISTEN/NOTIFY)
]

[project.optional-dependencies]
metrics = ["psutil"]               # hw_metrics CPU/RAM probe (GPU probe shells out, no dep)
redis = ["redis>=5"]               # the 'redis' StorageBackend (queue_workflows.backends.redis)
mongodb = ["pymongo>=4.4"]         # the 'mongodb' StorageBackend (needs a replica set)
test = ["pytest", "pytest-cov", "redis>=5", "pymongo>=4.4"]

[project.scripts]
queue-broker         = "queue_workflows.broker:main"         # stand up / inspect THE shared broker (one queue, all projects)
queue-claim-worker   = "queue_workflows.claim_worker:main"   # generic CLIs (used standalone / other projects)
queue-scheduler      = "queue_workflows.scheduler:main"
queue-orchestrator   = "queue_workflows.orchestrator:main"
queue-worker-control = "queue_workflows.worker_control:main"  # turn a (host,queue) worker ON/OFF
# queue-conductor moved to the separate queue-workflows-conductor distribution (conductor/pyproject.toml)

[tool.hatch.build.targets.wheel]
packages = ["queue_workflows"]

[tool.hatch.build.targets.wheel.force-include]
"queue_workflows/migrations" = "queue_workflows/migrations"   # ship the SQL as package data

[tool.pytest.ini_options]
testpaths = ["tests"]
# Two distributions live in this repo: the client (queue_workflows, at root) and
# the conductor (queue_workflows_conductor, under conductor/). Put both import
# roots on the path so the shared test suite can exercise either package without
# a separate install step.
pythonpath = [".", "conductor"]
